--- a/get-involved/become-a-host/index.html
+++ b/get-involved/become-a-host/index.html
@@ -6,7 +6,7 @@
 <meta property="og:title" content="CODATA-RDA Research Data Science Summer Schools Requirements of hosts" />
 <meta property="og:description" content="Venue 
 Hosts are required to provide a venue for the School, keeping in mind that a good venue is crucial to establishing a positive learning environment. Some things to consider include:
-  Tables arranged so participants can watch the instructor, use their laptops, and talk with their peers. Fold up desks are usually not a good choice.  Tables should be arranged so helpers and instructors can easily mingle around the room." />
+ Tables arranged so participants can watch the instructor, use their laptops, and talk with their peers. Fold up desks are usually not a good choice. Tables should be arranged so helpers and instructors can easily mingle around the room." />
 <meta property="og:type" content="article" />
 <meta property="og:url" content="http://something-fresh.org/get-involved/become-a-host/" />
 
@@ -20,7 +20,7 @@ Hosts are required to provide a venue for the School, keeping in mind that a goo
     
 <link rel="icon" type="image/png" href="/images/favicon.png" />
 <link href="https://fonts.googleapis.com/css?family=Open&#43;Sans:400,600" rel="stylesheet">
-<link rel="stylesheet" type="text/css" href="/css/style.min.665edc80ccd0976a8629e6c1cb2fe9bf051e86555cdf6aacc4f0046a0edc3b60.css" integrity="sha256-Zl7cgMzQl2qGKebByy/pvwUehlVc32qsxPAEag7cO2A=">
+<link rel="stylesheet" type="text/css" href="/css/style.min.71e8440302e69a19877e05b087d1291b0259a7cde5080a715dac1a32bd4db870.css" integrity="sha256-cehEAwLmmhmHfgWwh9EpGwJZp83lCApxXawaMr1NuHA=">
 <link rel="stylesheet" type="text/css" href="/css/icons.css">
 
   </head>
@@ -101,10 +101,7 @@ Hosts are required to provide a venue for the School, keeping in mind that a goo
 
             <div class="navbar-dropdown">
               <a href="/get-involved/become-an-instructor" class="navbar-item">
-                Become an Instructor
-              </a>
-              <a href="/get-involved/become-a-helper" class="navbar-item">
-                Become a Helper
+                Become an Instructor/Helper
               </a>
               <a href="/get-involved/become-a-host" class="navbar-item">
                 Become a Future Host
@@ -208,10 +205,7 @@ Hosts are required to provide a venue for the School, keeping in mind that a goo
 
           <div class="navbar-dropdown">
             <a href="/get-involved/become-an-instructor" class="navbar-item">
-              Become an Instructor
-            </a>
-            <a href="/get-involved/become-a-helper" class="navbar-item">
-              Become a Helper
+              Become an Instructor/Helper
             </a>
             <a href="/get-involved/become-a-host" class="navbar-item">
               Become a Future Host
@@ -259,83 +253,73 @@ Hosts are required to provide a venue for the School, keeping in mind that a goo
 </a></p>
 <p>Hosts are required to provide a venue for the School, keeping in mind that a good venue is crucial to establishing a positive learning environment. Some things to consider include:</p>
 <ul>
-<li> Tables arranged so participants can watch the instructor, use their laptops, and talk with their peers. Fold up desks are usually not a good choice.</li>
-<li> Tables should be arranged so helpers and instructors can easily mingle around the room.</li>
-<li> The room should have a projector and screen that everyone can see, with HDMI, VGA, and Mac adapters to allow anyone to plug in their laptop.</li>
-<li> High speed Wi-Fi internet access that can withstand everyone using it together. This may include securing guest access codes.</li>
-<li> Power outlets for all participants. This may include setting up extension cords or power strips.</li>
-<li> High table or podium that instructor can stand at while teaching. A flat podium is important; it’s difficult to use a laptop on a slanted podium.</li>
-<li> If possible, air conditioning or good ventilation if the venue gets very hot.</li>
+<li>Tables arranged so participants can watch the instructor, use their laptops, and talk with their peers. Fold up desks are usually not a good choice.</li>
+<li>Tables should be arranged so helpers and instructors can easily mingle around the room.</li>
+<li>The room should have a projector and screen that everyone can see, with HDMI, VGA, and Mac adapters to allow anyone to plug in their laptop.</li>
+<li>High speed Wi-Fi internet access that can withstand everyone using it together. This may include securing guest access codes.</li>
+<li>Power outlets for all participants. This may include setting up extension cords or power strips.</li>
+<li>High table or podium that instructor can stand at while teaching. A flat podium is important; it’s difficult to use a laptop on a slanted podium.</li>
+<li>If possible, air conditioning or good ventilation if the venue gets very hot.</li>
 </ul>
-<p><br /></p>
 <p><a id="accommodation"><h3 class="title is-3">Accommodation</h3>
 </a></p>
 <ul>
-<li> Accommodation should be provided for students and speakers. Ideally this would be on-site, walking distance, or reasonably accessible via public transport links. Students typically share twin rooms while speakers have a private single room.</li>
-<li> Accommodation facilities should have reliable (Wi-Fi) internet
-  connections.</li>
+<li>Accommodation should be provided for students and speakers. Ideally this would be on-site, walking distance, or reasonably accessible via public transport links. Students typically share twin rooms while speakers have a private single room.</li>
+<li>Accommodation facilities should have reliable (Wi-Fi) internet connections.</li>
 </ul>
-<p><br /></p>
 <p><a id="catering"><h3 class="title is-3">Catering/Refreshments</h3>
 </a></p>
 <ul>
-<li> People learn better when they are well fed. Therefore, catering for coffee breaks should be provided on-site, whereas lunch options should be provided on-site or close-by. They also won’t lose as much instructional time if they don’t have to leave to get coffee/lunch.</li>
+<li>People learn better when they are well fed. Therefore, catering for coffee breaks should be provided on-site, whereas lunch options should be provided on-site or close-by. They also won’t lose as much instructional time if they don’t have to leave to get coffee/lunch.</li>
 </ul>
-<p><br /></p>
 <p><a id="equipment"><h3 class="title is-3">Equipment and Materials</h3>
 </a></p>
 <ul>
-<li> Power strips, as noted above, to ensure everyone’s laptop stays charged.</li>
-<li> Sticky notes in two contrasting colors. These are an important part of how we get feedback during a lesson. We should have enough for each person to have about 8 of each color. Note that colorblindness can be an issue with differently-colored stickies (say red/green or blue/yellow), so alternate methods for feedback include offering sticky notes in two distinct shapes, or using a heavy marker to draw symbols on the sticky notes to convey meaning.</li>
-<li> Name tags to help people get to know each other.</li>
-<li> Extra pens and paper in case people want to take notes by hand.</li>
-<li> Sign in sheets (attendance lists - one for each day).</li>
-<li> Flipchart or whiteboard with felt-tip pen (ideally several in different colors) for the instructor to visualise concepts or note important details.</li>
+<li>Power strips, as noted above, to ensure everyone’s laptop stays charged.</li>
+<li>Sticky notes in two contrasting colors. These are an important part of how we get feedback during a lesson. We should have enough for each person to have about 8 of each color. Note that colorblindness can be an issue with differently-colored stickies (say red/green or blue/yellow), so alternate methods for feedback include offering sticky notes in two distinct shapes, or using a heavy marker to draw symbols on the sticky notes to convey meaning.</li>
+<li>Name tags to help people get to know each other.</li>
+<li>Extra pens and paper in case people want to take notes by hand.</li>
+<li>Sign in sheets (attendance lists - one for each day).</li>
+<li>Flipchart or whiteboard with felt-tip pen (ideally several in different colors) for the instructor to visualise concepts or note important details.</li>
 </ul>
-<br/>
 <p><a id="accessibility"><h3 class="title is-3">Accessibility</h3>
 </a></p>
 <ul>
-<li> It’s important to make sure the workshop space is accessible to all individuals. The registration form should ask whether instructors, helpers, and learners need any advance arrangements to ensure they can participate in the event. This may include considering whether or not:</li>
-<li> Building and venue are accessible to those who cannot use stairs (ramps, elevators, etc.).</li>
-<li> Restrooms are accessible.</li>
-<li> There is a lavalier (collar) microphone for instructors.</li>
-<li> The screen is large enough and bright enough to be easily read.</li>
-<li> The building and room can accommodate service animals.</li>
-<li> Lactation space is provided.</li>
-<li> Language of presentation will be English and/or another language.</li>
+<li>It’s important to make sure the workshop space is accessible to all individuals. The registration form should ask whether instructors, helpers, and learners need any advance arrangements to ensure they can participate in the event. This may include considering whether or not:</li>
+<li>Building and venue are accessible to those who cannot use stairs (ramps, elevators, etc.).</li>
+<li>Restrooms are accessible.</li>
+<li>There is a lavalier (collar) microphone for instructors.</li>
+<li>The screen is large enough and bright enough to be easily read.</li>
+<li>The building and room can accommodate service animals.</li>
+<li>Lactation space is provided.</li>
+<li>Language of presentation will be English and/or another language.</li>
 </ul>
 <p><strong>In case some of these cannot be provided for, make sure to state that clearly on the website.</strong></p>
-<p><br /></p>
 <p><a id="administrative"><h3 class="title is-3">Administrative support</h3>
 </a></p>
 <ul>
-<li> The local host should assist in the entire administrative process to plan, coordinate and deliver the Schools. This will require regular calls with the Task Group and specific inputs to support the application process and arrange student visas (if required) and travel logistics. </li>
-<li> An online system should be offered to collect, process and evaluate applications. These comprise a short web form, CV and support letters attachments. The host should allocate effort to contribute to the evaluation process and ensuring a balanced mix of participants. It is not necessary for the online system to be hosted locally, although firewall issues may arise when the site is hosted in another country.</li>
-<li> Depending on the mix of participants, visas may need to be arranged. The host should provide the necessary administrative support for this, and assist students with travel logistics and bookings. The CODATA Task Group will liaise with speakers and seek funding to cover their costs.</li>
-<li> Some software will need to be installed before the school (for example R and RStudio) and these should be clearly communicated with the students. A list of required software with detailed instructions for installation (for Windows, Linux and Mac OS) should be provided. Support will need to be on hand to deal with installation issues on the first morning of the school.</li>
+<li>The local host should assist in the entire administrative process to plan, coordinate and deliver the Schools. This will require regular calls with the Task Group and specific inputs to support the application process and arrange student visas (if required) and travel logistics.</li>
+<li>An online system should be offered to collect, process and evaluate applications. These comprise a short web form, CV and support letters attachments. The host should allocate effort to contribute to the evaluation process and ensuring a balanced mix of participants. It is not necessary for the online system to be hosted locally, although firewall issues may arise when the site is hosted in another country.</li>
+<li>Depending on the mix of participants, visas may need to be arranged. The host should provide the necessary administrative support for this, and assist students with travel logistics and bookings. The CODATA Task Group will liaise with speakers and seek funding to cover their costs.</li>
+<li>Some software will need to be installed before the school (for example R and RStudio) and these should be clearly communicated with the students. A list of required software with detailed instructions for installation (for Windows, Linux and Mac OS) should be provided. Support will need to be on hand to deal with installation issues on the first morning of the school.</li>
 </ul>
-<p><br /></p>
 <p><a id="socialmedia"><h3 class="title is-3">Social Media</h3>
 </a></p>
 <ul>
-<li> The event will be tweeted extensively during the school with the hashtag #data<Location><Year>, e.g. #dataTrieste2016. The organisers will provide a number of group photos and provide the files so that they can also be tweeted. Attendees of the school will be requested to join the Alumni Facebook page and will also be contacted in the future for anonymised longitudinal studies.</li>
+<li>The event will be tweeted extensively during the school with the hashtag #data<Location><Year>, e.g. #dataTrieste2016. The organisers will provide a number of group photos and provide the files so that they can also be tweeted. Attendees of the school will be requested to join the Alumni Facebook page and will also be contacted in the future for anonymised longitudinal studies.</li>
 </ul>
-<p><br /></p>
 <p><a id="financialsupport"><h3 class="title is-3">Financial Support</h3>
 </a></p>
 <ul>
-<li> Investment is needed to support student travel, accommodation and catering. The exact level of this will vary depending on the home location of participants. Assuming the School is held in a large urban area, one could estimate that c.30-50% of the participants come from the local area and may not need overnight accommodation. Others should be from the region so travel bursaries, daily subsistence stipends and accommodation for the fortnight should not exceed €800 per student.</li>
-<li> While the Task Group has secured a range of sponsorship in the past, particularly to support instructor and helper costs, the local organisers should not rely on the TG to provide financial support for the event.</li>
-<li> A small fee may be charged to reduce the number of no-shows. These registration fees can also help to cover some of the catering costs.</li>
+<li>Investment is needed to support student travel, accommodation and catering. The exact level of this will vary depending on the home location of participants. Assuming the School is held in a large urban area, one could estimate that c.30-50% of the participants come from the local area and may not need overnight accommodation. Others should be from the region so travel bursaries, daily subsistence stipends and accommodation for the fortnight should not exceed €800 per student.</li>
+<li>While the Task Group has secured a range of sponsorship in the past, particularly to support instructor and helper costs, the local organisers should not rely on the TG to provide financial support for the event.</li>
+<li>A small fee may be charged to reduce the number of no-shows. These registration fees can also help to cover some of the catering costs.</li>
 </ul>
-<p><br /></p>
 <p><a id="localinstruction"><h3 class="title is-3">Local Instruction</h3>
 </a></p>
 <ul>
-<li> The Task Group will interview potential local instructors on their suitability. If in the unlikely event that the Task Group cannot secure enough funding to cover external instructors’ expenses, then there should be enough local instructors for the school to go ahead. Make travel arrangements for visiting instructors (or communicate process to reimburse them for expenses). Get emergency contact information for instructors in case of last minute changes.</li>
+<li>The Task Group will interview potential local instructors on their suitability. If in the unlikely event that the Task Group cannot secure enough funding to cover external instructors’ expenses, then there should be enough local instructors for the school to go ahead. Make travel arrangements for visiting instructors (or communicate process to reimburse them for expenses). Get emergency contact information for instructors in case of last minute changes.</li>
 </ul>
-<p><br /></p>
 <p><a id="timeline"><h3 class="title is-3">Timeline</h3>
 </a></p>
 <p>The following milestones and timetable are a guide to the delivery of the school.</p>
