--- a/get-involved/become-an-instructor/index.html
+++ b/get-involved/become-an-instructor/index.html
@@ -3,8 +3,8 @@
   <head>
     
 
-<meta property="og:title" content="Under Construction" />
-<meta property="og:description" content="Comming Soon." />
+<meta property="og:title" content="Become a Helper or an Instructor" />
+<meta property="og:description" content="We are always interested in individuals willing to volunteer to act as an instructor or helper at one of our schools. Please contact us with a short description of your background, what type of courses could you teach or help on and why you are interestedimo taking part&rdquo;." />
 <meta property="og:type" content="article" />
 <meta property="og:url" content="http://something-fresh.org/get-involved/become-an-instructor/" />
 
@@ -18,7 +18,7 @@
     
 <link rel="icon" type="image/png" href="/images/favicon.png" />
 <link href="https://fonts.googleapis.com/css?family=Open&#43;Sans:400,600" rel="stylesheet">
-<link rel="stylesheet" type="text/css" href="/css/style.min.665edc80ccd0976a8629e6c1cb2fe9bf051e86555cdf6aacc4f0046a0edc3b60.css" integrity="sha256-Zl7cgMzQl2qGKebByy/pvwUehlVc32qsxPAEag7cO2A=">
+<link rel="stylesheet" type="text/css" href="/css/style.min.71e8440302e69a19877e05b087d1291b0259a7cde5080a715dac1a32bd4db870.css" integrity="sha256-cehEAwLmmhmHfgWwh9EpGwJZp83lCApxXawaMr1NuHA=">
 <link rel="stylesheet" type="text/css" href="/css/icons.css">
 
   </head>
@@ -99,10 +99,7 @@
 
             <div class="navbar-dropdown">
               <a href="/get-involved/become-an-instructor" class="navbar-item">
-                Become an Instructor
-              </a>
-              <a href="/get-involved/become-a-helper" class="navbar-item">
-                Become a Helper
+                Become an Instructor/Helper
               </a>
               <a href="/get-involved/become-a-host" class="navbar-item">
                 Become a Future Host
@@ -206,10 +203,7 @@
 
           <div class="navbar-dropdown">
             <a href="/get-involved/become-an-instructor" class="navbar-item">
-              Become an Instructor
-            </a>
-            <a href="/get-involved/become-a-helper" class="navbar-item">
-              Become a Helper
+              Become an Instructor/Helper
             </a>
             <a href="/get-involved/become-a-host" class="navbar-item">
               Become a Future Host
@@ -248,12 +242,12 @@
   <div class="container">
     <div class="columns">
       <div class="column is-centered-tablet-portrait">
-        <h1 class="title section-title">Under Construction</h1>
+        <h1 class="title section-title">Become a Helper or an Instructor</h1>
         <h5 class="subtitle is-5 is-muted"></h5>
         <div class="divider"></div>
       </div>
     </div>
-    <p>Comming Soon.</p>
+    <p>We are always interested in individuals willing to volunteer to act as an instructor or helper at one of our schools. Please <a href="mailto:">contact us</a> with a short description of your background, what type of courses could you teach or help on and why you are interestedimo taking part&rdquo;.</p>
 
   </div>
 </section>
