--- a/schools/testimonials/index.html
+++ b/schools/testimonials/index.html
@@ -3,8 +3,14 @@
   <head>
     
 
-<meta property="og:title" content="Under Construction" />
-<meta property="og:description" content="Comming Soon." />
+<meta property="og:title" content="Testimonials" />
+<meta property="og:description" content="I was lucky to join the school as a student last year, and to return back as helper this year. I think it was nice to live the experience twice but with different flavors:)
+Ola Karrar (@ZeinOla) - Trieste 2017
+
+They are amazing! Not just as #DataScientist but they are tremendous human beings! Muchas gracias @Fichulina #DataSaoPaulo17
+Juliano van Melis (@juliano_melis) - Sao Paulo 2017
+
+Thanks to CODATA-RDA Summer school, I hv learnt a lot from #machinelearning to #ethics and met beautiful people plus talk about Kenya with a Kenyan-born @simonhodson99 (executive director, CODATA) It was a pleasure meeting everyone at #DataTrieste18" />
 <meta property="og:type" content="article" />
 <meta property="og:url" content="http://something-fresh.org/schools/testimonials/" />
 
@@ -18,7 +24,7 @@
     
 <link rel="icon" type="image/png" href="/images/favicon.png" />
 <link href="https://fonts.googleapis.com/css?family=Open&#43;Sans:400,600" rel="stylesheet">
-<link rel="stylesheet" type="text/css" href="/css/style.min.665edc80ccd0976a8629e6c1cb2fe9bf051e86555cdf6aacc4f0046a0edc3b60.css" integrity="sha256-Zl7cgMzQl2qGKebByy/pvwUehlVc32qsxPAEag7cO2A=">
+<link rel="stylesheet" type="text/css" href="/css/style.min.71e8440302e69a19877e05b087d1291b0259a7cde5080a715dac1a32bd4db870.css" integrity="sha256-cehEAwLmmhmHfgWwh9EpGwJZp83lCApxXawaMr1NuHA=">
 <link rel="stylesheet" type="text/css" href="/css/icons.css">
 
   </head>
@@ -99,10 +105,7 @@
 
             <div class="navbar-dropdown">
               <a href="/get-involved/become-an-instructor" class="navbar-item">
-                Become an Instructor
-              </a>
-              <a href="/get-involved/become-a-helper" class="navbar-item">
-                Become a Helper
+                Become an Instructor/Helper
               </a>
               <a href="/get-involved/become-a-host" class="navbar-item">
                 Become a Future Host
@@ -206,10 +209,7 @@
 
           <div class="navbar-dropdown">
             <a href="/get-involved/become-an-instructor" class="navbar-item">
-              Become an Instructor
-            </a>
-            <a href="/get-involved/become-a-helper" class="navbar-item">
-              Become a Helper
+              Become an Instructor/Helper
             </a>
             <a href="/get-involved/become-a-host" class="navbar-item">
               Become a Future Host
@@ -248,12 +248,28 @@
   <div class="container">
     <div class="columns">
       <div class="column is-centered-tablet-portrait">
-        <h1 class="title section-title">Under Construction</h1>
+        <h1 class="title section-title">Testimonials</h1>
         <h5 class="subtitle is-5 is-muted"></h5>
         <div class="divider"></div>
       </div>
     </div>
-    <p>Comming Soon.</p>
+    <p><em>I was lucky to join the school as a student last year, and to return back as helper this year. I think it was nice to live the experience twice but with different flavors:)</em></p>
+<p>Ola Karrar (@ZeinOla) - Trieste 2017</p>
+<p><br /></p>
+<p><em>They are amazing! Not just as #DataScientist but they are tremendous human beings! Muchas gracias @Fichulina #DataSaoPaulo17</em></p>
+<p>Juliano van Melis (@juliano_melis) - Sao Paulo 2017</p>
+<p><br /></p>
+<p><em>Thanks to CODATA-RDA Summer school, I hv learnt a lot from #machinelearning to #ethics and met beautiful people plus talk about Kenya with a Kenyan-born @simonhodson99  (executive director, CODATA) It was a pleasure meeting everyone at #DataTrieste18</em></p>
+<p>Liliaan Juma (@TheOnlyJuma) - Trieste 2018</p>
+<p><br /></p>
+<p><em>I am loving the #DataTrieste18 stories this evening! Congrats to all of the participants, supporters and @resdatall and @CODATANews leads. What an exciting program! Can’t wait to hear more :)</em></p>
+<p>Lynn Yarmey (@LynnYarmey) - Trieste 2018</p>
+<p><br /></p>
+<p><em>What is the basics for working with data and doing research? Here at the #dataSãoPaulo18 workshop researchers discuss the responsibilities and ethics for data management and research.</em></p>
+<p>Jose Lopez (@joselatrans) - Sao Paulo 2018</p>
+<p><br /></p>
+<p><em>Among the many things that #dataSanJose19 left me is inspiration to learn/practice more and not stopping until you achieve your goals :-)</em></p>
+<p>Humberto Castellon (@castelloncom) - San José 2019</p>
 
   </div>
 </section>
