--- a/get-involved/become-a-supporter/index.html
+++ b/get-involved/become-a-supporter/index.html
@@ -3,8 +3,8 @@
   <head>
     
 
-<meta property="og:title" content="Under Construction" />
-<meta property="og:description" content="Comming Soon." />
+<meta property="og:title" content="Sponsor the Initiative" />
+<meta property="og:description" content="Please help us take the next steps towards expanding the programme and providing regional schools to ‘spread the message’ and achieve our vision of a global network of short courses providing foundational and advanced data skills. We invite sponsorship which will cover the costs of providing instructors for the next Trieste school as well as bursaries for students from LMICs. Sponsorship of the schools have the opportunity to support and meet researchers who may look for careers in your industry or will go on in the longer term to make decisions on purchasing products and services that you deliver." />
 <meta property="og:type" content="article" />
 <meta property="og:url" content="http://something-fresh.org/get-involved/become-a-supporter/" />
 
@@ -18,7 +18,7 @@
     
 <link rel="icon" type="image/png" href="/images/favicon.png" />
 <link href="https://fonts.googleapis.com/css?family=Open&#43;Sans:400,600" rel="stylesheet">
-<link rel="stylesheet" type="text/css" href="/css/style.min.665edc80ccd0976a8629e6c1cb2fe9bf051e86555cdf6aacc4f0046a0edc3b60.css" integrity="sha256-Zl7cgMzQl2qGKebByy/pvwUehlVc32qsxPAEag7cO2A=">
+<link rel="stylesheet" type="text/css" href="/css/style.min.71e8440302e69a19877e05b087d1291b0259a7cde5080a715dac1a32bd4db870.css" integrity="sha256-cehEAwLmmhmHfgWwh9EpGwJZp83lCApxXawaMr1NuHA=">
 <link rel="stylesheet" type="text/css" href="/css/icons.css">
 
   </head>
@@ -99,10 +99,7 @@
 
             <div class="navbar-dropdown">
               <a href="/get-involved/become-an-instructor" class="navbar-item">
-                Become an Instructor
-              </a>
-              <a href="/get-involved/become-a-helper" class="navbar-item">
-                Become a Helper
+                Become an Instructor/Helper
               </a>
               <a href="/get-involved/become-a-host" class="navbar-item">
                 Become a Future Host
@@ -206,10 +203,7 @@
 
           <div class="navbar-dropdown">
             <a href="/get-involved/become-an-instructor" class="navbar-item">
-              Become an Instructor
-            </a>
-            <a href="/get-involved/become-a-helper" class="navbar-item">
-              Become a Helper
+              Become an Instructor/Helper
             </a>
             <a href="/get-involved/become-a-host" class="navbar-item">
               Become a Future Host
@@ -248,12 +242,25 @@
   <div class="container">
     <div class="columns">
       <div class="column is-centered-tablet-portrait">
-        <h1 class="title section-title">Under Construction</h1>
+        <h1 class="title section-title">Sponsor the Initiative</h1>
         <h5 class="subtitle is-5 is-muted"></h5>
         <div class="divider"></div>
       </div>
     </div>
-    <p>Comming Soon.</p>
+    <p>Please help us take the next steps towards expanding the programme and providing regional schools to ‘spread the message’ and achieve our vision of a global network of short courses providing foundational and advanced data skills. We invite sponsorship which will cover the costs of providing instructors for the next Trieste school as well as bursaries for students from LMICs.
+Sponsorship of the schools have the opportunity to support and meet researchers who may look for careers in your industry or will go on in the longer term to make decisions on purchasing products and services that you deliver.
+Optimal numbers for the smooth working of the school at ICTP will be 50-60 students. Due to publicity from our networks most of these will be from LMICs and there is a high proportion of female applicants.</p>
+<p><br /></p>
+<p>What we are requesting
+We have four possible levels of sponsorship</p>
+<ul>
+<li><strong>Platinum</strong> Sponsorship €50,000</li>
+<li><strong>Gold</strong> Sponsorship €25,000</li>
+<li><strong>Silver</strong> Sponsorship €10,000</li>
+<li><strong>Bronze</strong> Sponsorship €5,000</li>
+</ul>
+<p><br /></p>
+<p>All sponsors will receive high levels of publicity at the schools in the form of sponsorship materials, press releases and on the partner organisations’ websites and in the newsletters of the International Council of Science, TWAS and ICTP. Gold Sponsors will have the opportunity to give an evening seminar to the students. Platinum sponsors will also have the opportunity to engage more deeply in the curriculum by taking part in the teaching of a half day course. All sponsored instructors and students will be listed as such in all communications and they will be required to blog and prepare short video posts about their experiences.</p>
 
   </div>
 </section>
