--- a/schools/history/index.html
+++ b/schools/history/index.html
@@ -22,7 +22,7 @@ Pictures from the First School
     
 <link rel="icon" type="image/png" href="/images/favicon.png" />
 <link href="https://fonts.googleapis.com/css?family=Open&#43;Sans:400,600" rel="stylesheet">
-<link rel="stylesheet" type="text/css" href="/css/style.min.665edc80ccd0976a8629e6c1cb2fe9bf051e86555cdf6aacc4f0046a0edc3b60.css" integrity="sha256-Zl7cgMzQl2qGKebByy/pvwUehlVc32qsxPAEag7cO2A=">
+<link rel="stylesheet" type="text/css" href="/css/style.min.71e8440302e69a19877e05b087d1291b0259a7cde5080a715dac1a32bd4db870.css" integrity="sha256-cehEAwLmmhmHfgWwh9EpGwJZp83lCApxXawaMr1NuHA=">
 <link rel="stylesheet" type="text/css" href="/css/icons.css">
 
   </head>
@@ -103,10 +103,7 @@ Pictures from the First School
 
             <div class="navbar-dropdown">
               <a href="/get-involved/become-an-instructor" class="navbar-item">
-                Become an Instructor
-              </a>
-              <a href="/get-involved/become-a-helper" class="navbar-item">
-                Become a Helper
+                Become an Instructor/Helper
               </a>
               <a href="/get-involved/become-a-host" class="navbar-item">
                 Become a Future Host
@@ -210,10 +207,7 @@ Pictures from the First School
 
           <div class="navbar-dropdown">
             <a href="/get-involved/become-an-instructor" class="navbar-item">
-              Become an Instructor
-            </a>
-            <a href="/get-involved/become-a-helper" class="navbar-item">
-              Become a Helper
+              Become an Instructor/Helper
             </a>
             <a href="/get-involved/become-a-host" class="navbar-item">
               Become a Future Host
